force-app/main/default/objects/Customer_Product_Sales_Report__c/Customer_Product_Sales_Report__c.object-meta.xml
<CustomObject>
    <label>Customer Product Sales Report</label>
    <nameField>
        <displayFormat>CPSR-{00000000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Customer Product Sales Report</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>