force-app/main/default/objects/Customer_Product_Sales_Report__c/fields/Brand__c.field-meta.xml
<CustomField>
    <fullName>Brand__c</fullName>
    <formula>TEXT(Product__r.Product__c)</formula>
    <label>品牌</label>
    <type>Text</type>
</CustomField>