force-app/main/default/objects/Customer_Product_Sales_Report__c/fields/Customer__c.field-meta.xml
<CustomField>
    <fullName>Customer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>客户</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Customer Product Sales Report</relationshipLabel>
    <relationshipName>Customer_Product_Sales_Report</relationshipName>
    <type>Lookup</type>
</CustomField>