force-app/main/default/objects/Customer_Product_Sales_Report__c/fields/Customer_Name__c.field-meta.xml
<CustomField>
    <fullName>Customer_Name__c</fullName>
    <formula>Customer__r.Name</formula>
    <label>客户名称</label>
    <type>Text</type>
</CustomField>