force-app/main/default/objects/Customer_Product_Sales_Report__c/fields/Cutomer_Channel__c.field-meta.xml
<CustomField>
    <fullName>Cutomer_Channel__c</fullName>
    <formula>TEXT(Customer__r.channel__c)</formula>
    <label>客户分类</label>
    <type>Text</type>
</CustomField>