force-app/main/default/objects/Customer_Product_Sales_Report__c/fields/Data_Source__c.field-meta.xml
<CustomField>
    <fullName>Data_Source__c</fullName>
    <label>数据来源</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>SAP</fullName>
            </value>
            <value>
                <fullName>Daily Sales</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>