force-app/main/default/objects/Customer_Product_Sales_Report__c/fields/Product_Attribute__c.field-meta.xml
<CustomField>
    <fullName>Product_Attribute__c</fullName>
    <formula>Product__r.Middle_High_Low_End__c</formula>
    <label>产品属性</label>
    <type>Text</type>
</CustomField>