force-app/main/default/objects/Customer_Product_Sales_Report__c/fields/Product_Line__c.field-meta.xml
<CustomField>
    <fullName>Product_Line__c</fullName>
    <label>产品线</label>
    <length>255</length>
    <type>Text</type>
</CustomField>