force-app/main/default/objects/Customer_Product_Sales_Report__c/fields/Quantity__c.field-meta.xml
<CustomField>
    <fullName>Quantity__c</fullName>
    <label>销量（弃用）</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>