force-app/main/default/objects/Customer_Product_Sales_Report__c/fields/Quantity_Invoice__c.field-meta.xml
<CustomField>
    <fullName>Quantity_Invoice__c</fullName>
    <label>销量（发票）</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>