force-app/main/default/objects/Customer_Product_Sales_Report__c/fields/Sales__c.field-meta.xml
<CustomField>
    <fullName>Sales__c</fullName>
    <label>销额（弃用）</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>