force-app/main/default/objects/Customer_Product_Sales_Report__c/fields/Sales_Invoice__c.field-meta.xml
<CustomField>
    <fullName>Sales_Invoice__c</fullName>
    <label>销额（发票）</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>