force-app/main/default/objects/Customer_Product_Sales_Report__c/fields/Sales_Region_Text__c.field-meta.xml
<CustomField>
    <fullName>Sales_Region_Text__c</fullName>
    <formula>CASE( Entity__c , 
&apos;8400&apos;, &apos;Hisense Malaysia&apos;, 
&apos;8420&apos;, &apos;Hisense Indonesia&apos;,
&apos;8430&apos;, &apos;Hisense Thailand&apos;,
&apos;&apos;)</formula>
    <label>公司(文本)</label>
    <type>Text</type>
</CustomField>