force-app/main/default/objects/Customer_Product_Sales_Report__c/fields/Sales_Sell_In__c.field-meta.xml
<CustomField>
    <fullName>Sales_Sell_In__c</fullName>
    <formula>IF( ISPICKVAL( Data_Source__c , &apos;SAP&apos;) ,  Sales_Invoice__c , null )</formula>
    <label>销额（Sell In）</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>