force-app/main/default/objects/Customer_Product_Sales_Report__c/fields/Shop_Code__c.field-meta.xml
<CustomField>
    <fullName>Shop_Code__c</fullName>
    <formula>Store__r.Shop_Code__c</formula>
    <label>门店编码</label>
    <type>Text</type>
</CustomField>