force-app/main/default/objects/Customer_Product_Sales_Report__c/fields/Standard_Price__c.field-meta.xml
<CustomField>
    <fullName>Standard_Price__c</fullName>
    <formula>Product__r.Guiding_Price__c</formula>
    <label>标准零售价</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>