force-app/main/default/objects/Customer_Product_Sales_Report__c/fields/Standard_Sales__c.field-meta.xml
<CustomField>
    <fullName>Standard_Sales__c</fullName>
    <formula>Product__r.Guiding_Price__c *  Quantity__c</formula>
    <label>标准销售额</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>