force-app/main/default/objects/Customer_Product_Sales_Report__c/fields/Statistical_Date__c.field-meta.xml
<CustomField>
    <fullName>Statistical_Date__c</fullName>
    <label>统计日期</label>
    <type>Date</type>
</CustomField>