force-app/main/default/objects/Customer_Product_Sales_Report__c/fields/Store__c.field-meta.xml
<CustomField>
    <fullName>Store__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>门店</label>
    <referenceTo>Shop__c</referenceTo>
    <relationshipLabel>Customer Product Sales Report</relationshipLabel>
    <relationshipName>Customer_Product_Sales_Report</relationshipName>
    <type>Lookup</type>
</CustomField>