force-app/main/default/objects/Customer_Product_Sales_Report__c/fields/User__c.field-meta.xml
<CustomField>
    <fullName>User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>人员名称</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Customer_Product_Sales_Report</relationshipName>
    <type>Lookup</type>
</CustomField>