force-app/main/default/objects/Customer_Product_Sales_Report__c/fields/User_Role__c.field-meta.xml
<CustomField>
    <fullName>User_Role__c</fullName>
    <formula>User__r.UserRole.Name</formula>
    <label>人员角色</label>
    <type>Text</type>
</CustomField>